// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`chatPrompt > renders with as correctly 1`] = `
"<section data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background/75 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</section>"
`;

exports[`chatPrompt > renders with body slot correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background/75 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary">
  <!--v-if-->Body slot
  <!--v-if-->
</form>"
`;

exports[`chatPrompt > renders with class correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background/75 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary p-5">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</form>"
`;

exports[`chatPrompt > renders with error correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background/75 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" disabled="" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</form>"
`;

exports[`chatPrompt > renders with footer slot correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background/75 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <div data-slot="footer" class="flex items-center justify-between gap-1.5">Footer slot</div>
</form>"
`;

exports[`chatPrompt > renders with header slot correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background/75 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary">
  <div data-slot="header" class="flex items-center gap-1.5">Header slot</div>
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</form>"
`;

exports[`chatPrompt > renders with placeholder correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background/75 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Placeholder" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</form>"
`;

exports[`chatPrompt > renders with ui correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background/75 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</form>"
`;

exports[`chatPrompt > renders with variant naked correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</form>"
`;

exports[`chatPrompt > renders with variant outline correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background/75 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</form>"
`;

exports[`chatPrompt > renders with variant soft correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background-elevated/50 outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:outline-3">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</form>"
`;

exports[`chatPrompt > renders with variant subtle correctly 1`] = `
"<form method="post" data-slot="root" class="relative flex flex-col items-stretch gap-2 px-2.5 py-2 w-full rounded-lg backdrop-blur-sm bg-background-elevated/50 ring ring-ring outline-primary/25 has-[textarea:focus-visible]:outline-3 has-[textarea:focus-visible]:ring-primary has-[[contenteditable]:focus-visible]:outline-3 has-[[contenteditable]:focus-visible]:ring-primary">
  <!--v-if-->
  <div data-slot="body" class="relative inline-flex items-center items-start gap-1.5"><textarea rows="1" placeholder="Type your message here…" class="placeholder:color-text-dimmed appearance-none border-0 rounded-md w-full disabled:opacity-75 disabled:cursor-not-allowed transition-colors px-2.5 py-1.5 text-base/5 gap-1.5 color-text-highlighted bg-transparent focus:outline-none resize-none px-0" data-slot="base" value=""></textarea>
    <!--v-if-->
    <!--v-if-->
  </div>
  <!--v-if-->
</form>"
`;
